// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages can display no page at all 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-Pages) components={{...}}>
        <inject-Pages components={{...}} classes={{...}}>
          <Pages components={{...}} classes={{...}} app={{...}} page="Foo" loading={false} loadMasks={{...}}>
            <div className="RSFPages-root-18">
              <WithStyles(LoadMask) show={false} fullscreen={true}>
                <LoadMask show={false} fullscreen={true} classes={{...}} align="center">
                  <div style={[undefined]} className="RSFLoadMask-root-20 RSFLoadMask-fullscreen-21">
                    <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                      <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                        <div className="MuiCircularProgress-root-25 MuiCircularProgress-colorSecondary-29 MuiCircularProgress-indeterminate-27" style={{...}} role="progressbar">
                          <svg className="MuiCircularProgress-svg-30" viewBox="22 22 44 44">
                            <circle className="MuiCircularProgress-circle-31 MuiCircularProgress-circleIndeterminate-33" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                          </svg>
                        </div>
                      </CircularProgress>
                    </WithStyles(CircularProgress)>
                  </div>
                </LoadMask>
              </WithStyles(LoadMask)>
            </div>
          </Pages>
        </inject-Pages>
      </WithStyles(inject-Pages)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`Pages displays a custom default loading component 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-Pages) loading={[Function: loading]} components={{...}}>
        <inject-Pages loading={[Function: loading]} components={{...}} classes={{...}}>
          <Pages loading={true} components={{...}} classes={{...}} app={{...}} page="Product" loadMasks={{...}}>
            <div className="RSFPages-root-35">
              <WithStyles(LoadMask) show={true} fullscreen={true}>
                <LoadMask show={true} fullscreen={true} classes={{...}} align="center">
                  <div style={[undefined]} className="RSFLoadMask-root-37 RSFLoadMask-show-41 RSFLoadMask-fullscreen-38">
                    <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                      <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                        <div className="MuiCircularProgress-root-42 MuiCircularProgress-colorSecondary-46 MuiCircularProgress-indeterminate-44" style={{...}} role="progressbar">
                          <svg className="MuiCircularProgress-svg-47" viewBox="22 22 44 44">
                            <circle className="MuiCircularProgress-circle-48 MuiCircularProgress-circleIndeterminate-50" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                          </svg>
                        </div>
                      </CircularProgress>
                    </WithStyles(CircularProgress)>
                  </div>
                </LoadMask>
              </WithStyles(LoadMask)>
              <div data-page="Product" style={{...}}>
                <Product onBefore={[Function]} onAfter={[Function]}>
                  <div>
                    Product
                  </div>
                </Product>
              </div>
            </div>
          </Pages>
        </inject-Pages>
      </WithStyles(inject-Pages)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`Pages displays the correct page 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-Pages) components={{...}}>
        <inject-Pages components={{...}} classes={{...}}>
          <Pages components={{...}} classes={{...}} app={{...}} page="Category" loading={false} loadMasks={{...}}>
            <div className="RSFPages-root-1">
              <WithStyles(LoadMask) show={false} fullscreen={true}>
                <LoadMask show={false} fullscreen={true} classes={{...}} align="center">
                  <div style={[undefined]} className="RSFLoadMask-root-3 RSFLoadMask-fullscreen-4">
                    <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                      <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                        <div className="MuiCircularProgress-root-8 MuiCircularProgress-colorSecondary-12 MuiCircularProgress-indeterminate-10" style={{...}} role="progressbar">
                          <svg className="MuiCircularProgress-svg-13" viewBox="22 22 44 44">
                            <circle className="MuiCircularProgress-circle-14 MuiCircularProgress-circleIndeterminate-16" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                          </svg>
                        </div>
                      </CircularProgress>
                    </WithStyles(CircularProgress)>
                  </div>
                </LoadMask>
              </WithStyles(LoadMask)>
              <div data-page="Category" style={{...}}>
                <Category onBefore={[Function]} onAfter={[Function]}>
                  <div>
                    Category
                  </div>
                </Category>
              </div>
            </div>
          </Pages>
        </inject-Pages>
      </WithStyles(inject-Pages)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`Pages displays the default loading component 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-Pages) components={{...}}>
        <inject-Pages components={{...}} classes={{...}}>
          <Pages components={{...}} classes={{...}} app={{...}} page="Product" loading={true} loadMasks={{...}}>
            <div className="RSFPages-root-52">
              <WithStyles(LoadMask) show={true} fullscreen={true}>
                <LoadMask show={true} fullscreen={true} classes={{...}} align="center">
                  <div style={[undefined]} className="RSFLoadMask-root-54 RSFLoadMask-show-58 RSFLoadMask-fullscreen-55">
                    <WithStyles(CircularProgress) className={[undefined]} color="secondary">
                      <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                        <div className="MuiCircularProgress-root-59 MuiCircularProgress-colorSecondary-63 MuiCircularProgress-indeterminate-61" style={{...}} role="progressbar">
                          <svg className="MuiCircularProgress-svg-64" viewBox="22 22 44 44">
                            <circle className="MuiCircularProgress-circle-65 MuiCircularProgress-circleIndeterminate-67" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                          </svg>
                        </div>
                      </CircularProgress>
                    </WithStyles(CircularProgress)>
                  </div>
                </LoadMask>
              </WithStyles(LoadMask)>
              <div data-page="Product" style={{...}}>
                <Product onBefore={[Function]} onAfter={[Function]}>
                  <div>
                    Product
                  </div>
                </Product>
              </div>
            </div>
          </Pages>
        </inject-Pages>
      </WithStyles(inject-Pages)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
